--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "scripts": {
     "test": "echo Tests? Go away. && exit 1"
   },
+  "engines": {
+    "node": ">= 0.10.0"
+  },
   "dependencies": {
     "express": "~3.1",
     "oauth": "~0.9",
-    "socket.io": "~0.9"
+    "socket.io": "~0.9",
+    "yajl": "~0.8"
   },
   "repository": {
     "type": "git",
