--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "express": "~3.1",
+    "requirejs": "~2.1",
+    "amdefine": "~0.0.2",
     "oauth": "~0.9",
     "socket.io": "~0.9",
     "yajl": "~0.8"
